--- a/index.html
+++ b/index.html
@@ -20,14 +20,18 @@
                     <a href="../signup/index.html"><button class="button">Sign Up</button></a>
                 </nav>
             </header>
-            <form action="" class="form">
+            <form action="" id="form">
                 <p>Email</p>
                 <input type="email" name="username" placeholder="  Email" required><br>
-                <p>Password</p>
-                <input type="password" name="password" placeholder="  Password" required><br>
-                <a href="">Login</a>
-                <a href="../signup/index.html">Register</a>
-            </form>  
+                <p>First Name</p>
+                <input type="text" name="firstname" placeholder=" First Name" required><br>
+                <p>Last Name</p>
+                <input type="text" name="lastname" placeholder=" Last Name" required><br>
+                <p>Create Password</p>
+                <input type="password" name="password" placeholder="  Create a password" required><br>
+                <a href="../login/index.html">Login</a>
+                <a href="">Register</a>
+            </form>
         </div>
     </div>
 </body>
